<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Loan Lists</string>
    <string name="settings">Settings</string>
    <string name="lent">Lent</string>
    <string name="borrowed">Borrowed</string>
    <string name="returned">Returned</string>
    <string name="none">None</string>
    <string name="empty_loan_list">Empty loan list</string>
    <string name="item">Item</string>
    <string name="loan_date">Loan date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_loan">New loan</string>
    <string name="item_cant_be_blank">Item can\'t be blank</string>
    <string name="no_loan_selected">No loan selected</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="item_icon">Item icon</string>
    <string name="loan_lists">Loan lists</string>
    <string name="tools">Tools</string>
    <string name="contact">Contact</string>
    <string name="delete">Delete</string>
    <string name="no_contact">No contact</string>
    <string name="clear">Clear</string>
    <string name="loan_details">Loan details</string>
    <string name="picture">Picture</string>
    <string name="no_picture">No picture</string>
    <string name="choose_picture_item">Choose a picture for the item %s</string>
    <string name="write_external_storage_required">Permission to write on external storage is required to take a picture</string>
    <string name="clear_all_loan_lists">Clear all loan lists</string>
    <string name="clear_all_lists_question">Do you want to clear all loan lists ?</string>
    <string name="clear_return_list_question">Do you want to clear return loan list ?</string>
    <string name="all_loan_lists_already_empty">All loan lists are already empty</string>
    <string name="return_loan_lists_already_empty">Return loan list is already empty</string>
    <string name="all_loan_lists_cleared">All loan lists cleared</string>
    <string name="return_loan_list_cleared">Return loan list cleared</string>
    <string name="notifications">Notification</string>
    <string name="notification_date_return_summary">You will be notified when return date is reached</string>
    <string name="return_loan">Return this loan</string>
    <string name="status">Status</string>
    <string name="loan_returned">Loan has been returned</string>
    <string name="notification">Notification</string>
    <string name="click_see_loan_details">Click here to see loan details</string>
    <string name="return_date">Return date</string>
    <string name="loan_reached_return_date">\"%1$s\" has reached its return date</string>
    <string name="set_as_return">Set as returned</string>
    <string name="return_date_updated">Return date updated</string>
    <string name="add_a_week">Add a week</string>
    <string name="loan_deleted">Loan deleted</string>
    <string name="error_on_deleting_loan">Error on deleting loan</string>
    <string name="delete_loan_question">Do you want to delete this loan ?</string>
    <string name="show_contact">Show contact</string>
    <string name="display_contact_card">Display contact card</string>
    <string name="sync">Sync</string>
    <string name="google_drive">Google Drive</string>
    <string name="google_drive_summary">Your loans will be saved automatically on your Google Drive account</string>
    <string name="connection_google_drive_failed">Connection to Google Drive failed</string>
    <string name="create_calendar_event">Create a calendar event</string>
    <string name="share">Share</string>
    <string name="export_loan_lists" tools:ignore="UnusedResources">Export loan lists</string>
    <string name="export_loan_lists_text" tools:ignore="UnusedResources">Loan lists exported in JSON format</string>
    <string name="loans_lists_export_failed" tools:ignore="UnusedResources">Loan lists export failed</string>
    <string name="nothing_lent">Nothing was lent</string>
    <string name="lent_list_count" tools:ignore="UnusedResources">Lent lists [%d]</string>
    <string name="item_lent_sentence_with_contact">%1$s lent to %2$s on %3$s</string>
    <string name="item_lent_sentence">%1$s lent on %2$s</string>
    <string name="item_borrowed_sentence_with_contact">%1$s borrowed from %2$s on %3$s</string>
    <string name="item_borrowed_sentence">%1$s borrowed on %2$s</string>
    <string name="item_returned_sentence">%1$s returned on %2$s</string>
    <string name="background">Background</string>
    <string name="take_picture">Take a picture</string>
    <string name="pick_image">Pick an image</string>
    <plurals name="plural_day">
        <item quantity="zero">%d day</item>
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="plural_day_left">
        <item quantity="zero">%d day left</item>
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <plurals name="plural_day_late">
        <item quantity="zero">%d day late</item>
        <item quantity="one">%d day late</item>
        <item quantity="other">%d days late</item>
    </plurals>
    <plurals name="plural_item">
        <item quantity="zero">%d item</item>
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string-array name="status_list">
        <item>@string/lent</item>
        <item>@string/borrowed</item>
        <item>@string/returned</item>
    </string-array>
</resources>
