<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- to return this loan -->
    <item
        android:id="@+id/action_return"
        android:icon="@drawable/ic_return_white_24dp"
        android:title="@string/return_loan"
        app:showAsAction="ifRoom"/>

    <!-- to add calendar event -->
    <item
        android:id="@+id/action_calendar_event"
        android:icon="@drawable/ic_event_white_24dp"
        android:title="@string/create_calendar_event"
        app:showAsAction="ifRoom"/>

    <!-- delete this loan -->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

</menu>