<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp"
        android:background="@drawable/badge_background"
        android:contentDescription="@string/picture"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/initial"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="O"
        android:textColor="@color/colorBadgeContent"
        android:textSize="35sp"
        android:alpha="0.8" />

    <ImageView
        android:id="@+id/clipart"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:padding="25dp"
        android:contentDescription="@string/clipart"
        android:src="@drawable/clipart_money"
        android:tint="@color/colorBadgeContent"
        android:alpha="0.8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/circle"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:paddingBottom="2dp"
            android:text="@string/app_name"
            android:textSize="@dimen/list_item_text_size_primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/app_name"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/list_item_text_size_secondary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loan_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/app_name"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/list_item_text_size_secondary" />

            <ImageView
                android:id="@+id/date_separator"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_forward_text_24dp"
                android:contentDescription="@string/return_date"/>

            <TextView
                android:id="@+id/return_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/app_name"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/list_item_text_size_secondary" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
